Create the main section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,102 @@
                 <li><img src="assets/shield.svg" alt="shield">Privacy</li>
             </ul>
         </div>
-        <div id="main"></div>
+
+        <div id="main">            
+            <div id="proj">
+                <div>Your Projects</div>
+                <div id="projects">
+                    <div class="card">
+                        <p>Super Cool Project<br>
+                        <span>Sed nec tristique elit. Maecenas sit amet sapien eget ligula tincidunt feugiat ut sed ligula.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Less Cool Project<br>
+                        <span>Nam efficitur dictum augue vel efficitur. Sed consequat, lectus nec auctor condimentum, lorem ligula tincidunt turpis, sit amet aliquet ligula ex dignissim tellus.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Impossible App<br>
+                        <span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Easy Peasy App<br>
+                        <span>Mauris mollis orci vitae felis porta, vel euismod erat viverra. Vestibulum at ipsum lobortis, laoreet libero sagittis, tincidunt ligula.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Ad Blocker<br>
+                        <span>Aliquam posuere, mi non feugiat malesuada, sapien erat posuere enim, in blandit leo dui in quam.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p>Money Maker<br>
+                        <span>Integer aliquam orci enim, in rutrum risus ultricies in. Vestibulum efficitur in purus a suscipit. Aliquam convallis dolor vitae nulla euismod rhoncus.</span></p>
+                        <div class="icons">
+                            <img src="assets/star.svg" alt="star">
+                            <img src="assets/eye.svg" alt="eye">
+                            <img src="assets/delete.svg" alt="delete">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="announcements">
+                <div>Announcements</div>
+                <div class="card2">
+                    <p>Site Maintenance<br>
+                        <span>Nunc elementum erat quis lobortis molestie. Nulla facilisi. Aliquam ac venenatis justo, at rutrum ante...</span></p>
+                    <p>Community Share Day<br>
+                        <span>Maecenas lacinia semper sapien ut sollicitudin. Sed tristique tempor leo in iaculis. Suspendi...</span></p>
+                    <p class="no-border">Updated Privacy Policy<br>
+                        <span>In varius tortor mollis id. Mauris iaculis lacus ex, ac sagittis nisi vulputate vitae. In vitae iaculis purus, vel consectetur orci...</span></p>
+                </div>
+            </div>
+
+            <div id="trending">
+                <div>Trending</div>
+                <div class="card2">
+                    <div class="item">
+                        <img src="assets/elephant.png" alt="elephant">
+                        <p>@tegan<br><span>World Peace Builder</span></p>
+                    </div>
+                    <div class="item">
+                        <img src="assets/cat.svg" alt="cat">
+                        <p>@morgan<br><span>Super Cool Project</span></p>
+                    </div>
+                    <div class="item">
+                        <img src="assets/rabbit.png" alt="rabbit">
+                        <p>@kendall<br><span>Life Changing App</span></p>
+                    </div>
+                    <div class="item">
+                        <img src="assets/dog2.png" alt="dog2">
+                        <p>@alex<br><span>No Traffic Maker</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
