Change alt selectors to id

--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
                 <div>Trending</div>
                 <div class="card2">
                     <div class="item">
-                        <img src="assets/elephant.png" alt="elephant">
+                        <img src="assets/elephant.png" id="elephant">
                         <p>@tegan<br><span>World Peace Builder</span></p>
                     </div>
                     <div class="item">
-                        <img src="assets/cat.svg" alt="cat">
+                        <img src="assets/cat.svg" id="cat">
                         <p>@morgan<br><span>Super Cool Project</span></p>
                     </div>
                     <div class="item">
-                        <img src="assets/rabbit.png" alt="rabbit">
+                        <img src="assets/rabbit.png" id="rabbit">
                         <p>@kendall<br><span>Life Changing App</span></p>
                     </div>
                     <div class="item">
-                        <img src="assets/dog2.png" alt="dog2">
+                        <img src="assets/dog2.png" id="dog2">
                         <p>@alex<br><span>No Traffic Maker</span></p>
                     </div>
                 </div>
